CI images update

--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-27 10:35:14
+lastsearch = 2024-07-27 13:21:27
 
 [chieutruc.info]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = Bảng cân nặng và chiều dài thai nhi theo tiêu chuẩn của ..
 url = https://www.vinmec.com/vie/bai-viet/bang-can-nang-va-chieu-dai-thai-nhi-theo-tieu-chuan-cua-who-vi
 
 [www.youtube.com]
-match = -109.1%%
-title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng ...
-url = https://www.youtube.com/watch?v=uPDPr__M7aI
+match = 9.1%%
+title = [HD] Chiếu cói Kim Sơn - Ninh Bình
+url = https://www.youtube.com/watch?v=3QOyWtlqmqg
 
 [www.facebook.com]
 match = 45.5%%
