--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-27 03:28:08
+lastsearch = 2024-07-27 13:25:51
 
 [www.diepxuan.com]
 match = 5.9%%
@@ -22,9 +22,9 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = -105.9%%
-title = Combo 2 chiếc gối bông cotton korea 65cm x 45cm
-url = https://shopee.vn/Combo-2-chiếc-gối-bông-cotton-korea-65cm-x-45cm-01-cặp-ruột-gối-bông-cao-cấp-i.135534164.7132132800
+match = -58.8%%
+title = Đôi Ruột Gối Bông Hạt Korea Ép Hơi 50*70cm
+url = https://shopee.vn/🌱-Đôi-Ruột-Gối-Bông-Hạt-Korea-Ép-Hơi-50*70cm-i.125787394.5970171584
 
 [demxanh.com]
 match = -100.0%%
