--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-27 10:30:16
+lastsearch = 2024-07-27 13:30:22
 
 [tiki.vn]
-match = -138.9%%
-title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
+match = -122.2%%
+title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
@@ -39,7 +39,7 @@ url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao
 [demxanh.com]
 match = -77.8%%
 title = Bộ ga chun Cotton chống thấm màu xanh ngọc
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html?srsltid=AfmBOorzdpfupG0zGfmM1t4YJvptk29tSTo2TRH3bATA3rVn0bXi7Ajb
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
 match = -66.7%%
