--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-27 12:18:13
+lastsearch = 2024-07-27 13:21:06
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -37,8 +37,8 @@ title = [New] Bảng Giá nệm cao su Kim Cương - Sale Tháng 3, 4 ...
 url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 
 [www.diepxuan.com]
-match = -61.9%%
-title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+match = -14.3%%
+title = Nệm Everhome - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
