--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-07-27 11:59:54
+lastsearch = 2024-07-27 13:15:18
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -29,12 +29,12 @@ url = https://everonhn.com.vn/tam-trai-da-nang-everon
 [everonvn.com.vn]
 match = 18.2%%
 title = Bảng giá bán Tấm topper Everon AVIV
-url = https://everonvn.com.vn/everon/2215/topper-everon-aviv?srsltid=AfmBOoqImJaFaTl3iPzh-EnCgJ1eqBnRlJS_y3_fsoPhH4V5iwJzHvwO
+url = https://everonvn.com.vn/everon/2215/topper-everon-aviv
 
 [everon.com]
-match = -113.6%%
-title = Bảng giá của 5 loại topper trải sàn đa năng, cao cấp nhất ...
-url = https://everon.com/tin-san-pham/topper-trai-san-n256.html
+match = 47.1%%
+title = Tấm trải - Topper
+url = https://everon.com/danh-muc-san-pham/tam-trai-topper
 
 [everonthaiha.com]
 match = 47.1%%
@@ -52,8 +52,8 @@ title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [kbedding.vn]
-match = -54.5%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
+match = -109.1%%
+title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên) - K-Bedding
 url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
 
 [dailyeveron.vn]
