CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-27 12:51:21
+lastsearch = 2024-07-27 13:39:40
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -17,9 +17,9 @@ title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
-match = 3.7%%
-title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
+match = -11.1%%
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung ...
+url = https://www.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [tiki.vn]
 match = -3.7%%
@@ -102,9 +102,9 @@ title = Những điều cấm kỵ ở Thái Lan TUYỆT ĐỐI mà bạn cần 
 url = https://www.kosshop.vn/t/nhung-dieu-cam-ky-o-thai-lan.html
 
 [m.facebook.com]
-match = -55.6%%
-title = Em chuẩn bị chuyển khỏi ktx qua BT, ko biết có bên nào ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2398640093849789/
+match = 7.4%%
+title = WHERE DO YOU ORDER YOUR COOKING GAS
+url = https://m.facebook.com/groups/penangtraveltips/posts/674866215937708/
 
 [vietbao.com]
 match = -59.3%%
@@ -152,9 +152,9 @@ title = Khách Tây thẳng thắn nói lý do tại sao mê Việt Nam ...
 url = https://dantri.com.vn/du-lich/khach-tay-thang-than-noi-ly-do-tai-sao-me-viet-nam-hon-thai-lan-20240625105824635.htm
 
 [www.facebook.com]
-match = -37.0%%
-title = Chăn 3kg 4 kg 5kg Thành... - Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/story.php/?story_fbid=436093618729320&id=100069860554625
+match = -22.2%%
+title = GIÁ SIÊU RẺ | 📍 𝐓𝐨𝐮𝐫 𝐓𝐡𝐚́𝐢 𝐋𝐚𝐧 𝟒𝐍𝟑Đ 𝐏𝐀𝐓𝐓𝐀𝐘𝐀- ...
+url = https://www.facebook.com/groups/367569001072970/posts/-𝐓𝐨𝐮𝐫-𝐓𝐡𝐚́𝐢-𝐋𝐚𝐧-𝟒𝐍𝟑đ-𝐏𝐀𝐓𝐓𝐀𝐘𝐀-𝐁𝐀𝐍𝐆𝐊𝐎𝐊-coffee-tổ-chim-𝐋𝐢̣𝐜𝐡-𝐤𝐡𝐨̛̉𝐢-𝐡𝐚̀𝐧𝐡-tháng-7-v/1236797164150145/
 
 [stockbiz.vn]
 match = 18.5%%
@@ -207,9 +207,9 @@ title = Huýt sáo vào ban đêm cũng là điều "cấm kỵ"
 url = https://cafef.vn/nhung-dieu-du-khach-tuyet-doi-khong-nen-lam-khi-toi-thai-lan-huyt-sao-vao-ban-dem-cung-la-dieu-cam-ky-18824071819333533.chn
 
 [chiaki.vn]
-match = -33.3%%
-title = Chăn nhung tuyết lông thỏ Blanket nội địa Trung, Xanh lam
-url = https://chiaki.vn/chan-tuyet-nhung-long-tho-blanket-noi-dia-trung
+match = -25.9%%
+title = Chăn lông tuyết Dot To Dot cho bé của Hàn, Trắng trơn
+url = https://chiaki.vn/chan-long-tuyet-dot-to-dot-cho-be-cua-han
 
 [budget.hawaii.gov]
 match = 20.0%%
@@ -250,4 +250,19 @@ url = https://langmaithailan.org/goc-cu-toi-ve-chan-tuyet-nghiem/la-thu-vuon-uom
 match = -48.1%%
 title = Items where Author or Contributor is "Hibberd, ML"
 url = https://researchonline.lshtm.ac.uk/view/creators/ipmbmhib.html
+
+[susi.usi.ch]
+match = 11.1%%
+title = Swiss Open Access Repository
+url = https://susi.usi.ch/global/search/documents?q=contribution.agent.preferred_name:Lam,+Steven
+
+[cabrinivillas.com]
+match = -122.2%%
+title = Iw06 is different from server Patriotilor bucuresti Dg ... - Cabrini Villas
+url = https://cabrinivillas.com/show.aspx?url=//xn--98-6kc3bfr2e.xn--p1ai/9725631yo57sc01-16beflexycombr4fe43y
+
+[kysucongnghe.net]
+match = -75.0%%
+title = Dac San KSCN
+url = https://kysucongnghe.net/resource/dacsan/ds5_2013/ds5p1_30.PDF
 
