--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-27 12:37:48
+lastsearch = 2024-07-27 13:35:34
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Giá Bao Nhiêu?
 url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.facebook.com]
-match = 8.3%%
-title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
-url = https://www.facebook.com/chieutructot/?locale=vi_VN
+match = 4.2%%
+title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
+url = https://www.facebook.com/chieutregiare/
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -210,4 +210,9 @@ url = https://thegioichieutruc.com/
 match = -33.3%%
 title = Hiệp hội doanh nghiệp Thành phố và Chi ...
 url = https://www.quangninh.gov.vn/donvi/tpcampha/Trang/ChiTietTinTuc.aspx?nid=26684
+
+[baolaocai.vn]
+match = -83.3%%
+title = Thành lập Chi bộ Công ty TNHH Một thành viên Xây dựng ...
+url = https://baolaocai.vn/thanh-lap-chi-bo-cong-ty-tnhh-mot-thanh-vien-xay-dung-va-thuong-mai-208-post387616.html
 
