--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-27 12:12:43
+lastsearch = 2024-07-27 13:33:12
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa - Chăn ga gối đệm cao cấp Dreamland
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = 9.7%%
-title = Chăn Ga Gối Dreamland Chính Hãng Giá Tốt
-url = https://demxinh.vn/chan-ga-goi-dreamland/
+match = -29.0%%
+title = Đệm lò xo cao cấp, Mua nệm lò xo bảo trì trọn đời
+url = https://demxinh.vn/dem-lo-xo/
 
 [dongahome.vn]
 match = 3.2%%
@@ -37,9 +37,9 @@ title = Đệm lò xo cao cấp Hanvico Hera - 2024
 url = https://dongahome.vn/dem-lo-xo-cao-cap-hanvico-hera
 
 [vuanem.com]
-match = -48.4%%
-title = Top 8 cửa hàng bán chăn ga gối nệm Quận 2 giá tốt, chất ...
-url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-2.html
+match = -35.5%%
+title = Để chuyện phòng the lên đỉnh, bạn nên chọn loại nệm nào?
+url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html
 
 [uannga.vn]
 match = 48.3%%
