--- a/images/nem-dreamland-uc-160x200x09/config.ini
+++ b/images/nem-dreamland-uc-160x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-dreamland-uc-160x200x09.html
 lastopen = 2024-06-07 01:35:10
 
 [search]
-lastsearch = 2024-07-27 12:42:36
+lastsearch = 2024-07-27 13:46:29
 
 [www.diepxuan.com]
 match = 51.9%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOooQim8nCJ669ag2YY0acqUY9i6z0i8rZMRckI-oabGqmzNb4yDR
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [forums.brianenos.com]
 match = -66.7%%
