--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-27 12:13:24
+lastsearch = 2024-07-27 13:48:48
 
 [erado.vn]
 match = 5.0%%
 title = Giường da hạng sang mã DV14
-url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html?srsltid=AfmBOopafSqDmKcWfxZ2AeJc4hd8nnSuF4OiL9l2eA8jJioy-8Jii1FP
 
 [shopee.vn]
 match = -65.0%%
@@ -134,7 +134,7 @@ url = https://inoacliving.vn/blog/kich-thuoc-nem-tieu-chuan/
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 14 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html?srsltid=AfmBOoqhJgvFr6iIibO2okLnXBDR4ZROC-S7v5AN9b_1KUELvOn0HhWd
 
 [sofaphongkhach.vn]
 match = -40.0%%
