--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-27 12:17:33
+lastsearch = 2024-07-27 13:46:10
 
 [www.walmart.com]
 match = -162.5%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=CUQBFAvIlUU
 [m.facebook.com]
 match = 0.0%%
 title = Thiên An Stationery
-url = https://m.facebook.com/profile.php?id=100065257461640&locale=fr_FR
+url = https://m.facebook.com/profile.php?id=100065257461640&locale=ms_MY
 
 [noveltoon.vn]
 match = -100.0%%
