--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-27 11:57:08
+lastsearch = 2024-07-27 13:36:34
 
 [shopee.vn]
-match = -43.5%%
-title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
-url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
+match = 4.3%%
+title = Chiếu Trúc Cao Bằng - Chiếu trúc cá nhân
+url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313558.19277857647
 
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOopsppftjUlaSnzsJ-acCEZvW1OrlUb_8DQ0HFWC6hoZlTGkEoTw
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
 
 [chuyenhangviet.com]
 match = -43.5%%
