--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-27 12:21:24
+lastsearch = 2024-07-27 13:48:27
 
 [chieutrelanlan.com]
 match = -16.7%%
@@ -79,7 +79,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 [demxanh.com]
 match = -45.8%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoq8PpSNAWvHM8vCsnOz2urDsQYqrLJYYyv6Q1kmnOxTLNfWfB4S
+url = https://demxanh.com/chieu-truc.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -274,7 +274,7 @@ url = https://roman.vn/huong-dan-cach-chon-aptomat-cho-ho-gia-dinh-chinh-xac-nha
 [www.lazada.vn]
 match = -62.5%%
 title = chiếu tre 1,6*2m Trúc Linh hàng Việt Nam cao cấp siêu rẻ
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html?srsltid=AfmBOorolO0LkifKX9QeoePC5rLmSwNHoCZ30jBDN24KWzPmWW9PWz-e
+url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html
 
 [www.sbv.gov.vn]
 match = -111.1%%
