--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-27 12:32:41
+lastsearch = 2024-07-27 13:40:01
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Anti-Korean sentiment
-url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = 0.0%%
-title = Attica Prison Footage
-url = https://www.tiktok.com/discover/attica-prison-footage
+match = -20.0%%
+title = Colombians Riot Hard Rock Cafe
+url = https://www.tiktok.com/discover/colombians-riot-hard-rock-cafe
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
