CI images update

--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-27 09:37:41
+lastsearch = 2024-07-27 13:50:50
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -470,4 +470,9 @@ url = https://www.pbshawaii.org/wp-content/uploads/2024/07/PBSHI-PG_AUG24-Web_05
 match = -200.0%%
 title = TUI
 url = https://sr.linkedin.com/company/tuigroup?trk=products_details_guest_organization_name
+
+[bg.linkedin.com]
+match = -200.0%%
+title = TUI
+url = https://bg.linkedin.com/company/tuigroup?trk=ppro_cprof
 
