--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-27 11:51:11
+lastsearch = 2024-07-27 13:54:38
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -33.3%%
-title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22004
-url = https://www.everonvn.vn/chi-tiet/everon-esm22004.html
+match = -87.5%%
+title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -39,7 +39,7 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 [everon.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOor6Ta_P6uoZfycmrNprLWPhIinZZhQP0RcckR54eQdpEvTMtTWO
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOopsXNphD8-IcmAn9BIRPzRRWVANzbwLtf2DYa-WVifYkpYpdlyJ
 
 [dailyeveron.vn]
 match = -66.7%%
