--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-27 07:56:58
+lastsearch = 2024-07-27 13:55:39
 
 [www.diepxuan.com]
 match = -6.7%%
 title = Điệp Xuân Chiếu cây HT 160x200
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOortWHZtg5dT52GNzVpO6wqwUCvf6hP-hlrWrX1meFRW7TTHbf9P
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -53.3%%
+title = HT VISION, Cửa hàng trực tuyến
+url = https://shopee.vn/cameragiarebatngo
 
 [www.htv.com.vn]
 match = -106.7%%
