--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-27 10:27:46
+lastsearch = 2024-07-27 13:58:21
 
 [shopee.vn]
-match = -13.8%%
-title = Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ 2m ...
-url = https://shopee.vn/Chiếu-nhựa-thái-lan-ăn-cơm-điều-hoà-gấp-gọn-đủ-cỡ-2m-3m-4m-i.13406575.655918786
+match = 0.0%%
+title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/nhựa
 
 [www.maihuyencorp.com]
 match = 13.8%%
@@ -17,9 +17,9 @@ title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
 url = https://www.maihuyencorp.com/
 
 [www.lazada.vn]
-match = -31.0%%
-title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
+match = -13.8%%
+title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
+url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html
 
 [tiki.vn]
 match = -13.8%%
@@ -27,14 +27,14 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.facebook.com]
-match = -51.7%%
-title = Bán buôn bán lẻ các loại chiếu nhựa... - Chiếu Trúc Việt Nam
-url = https://www.facebook.com/chieutruc.vn/posts/bán-buôn-bán-lẻ-các-loại-chiếu-nhựa-đủ-các-kích-thước-80cm-90cm-1m-1m2-1m5-1m6-1/246703009025205/
+match = 31.0%%
+title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
+url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
 
 [www.sendo.vn]
-match = 0.0%%
-title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
-url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
+match = 13.8%%
+title = Chiếu nhựa Việt Nam 1m8 -2m GIÁ RẺ NHẤT - CN182M
+url = https://www.sendo.vn/chieu-nhua-vie-t-nam-1m8-2m-gia-re-nha-t-48369789.html
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
