--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -22,8 +22,8 @@ title = đệm bông ép Dreamland chống thoái hóa cột sống
 url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [dreamland.vn]
-match = -38.7%%
-title = Chăn Tuyết Điều Hòa - Chăn ga gối đệm cao cấp Dreamland
+match = -21.1%%
+title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
