--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-27 12:12:21
+lastsearch = 2024-07-27 13:46:41
 
 [www.ncbi.nlm.nih.gov]
-match = -410.0%%
-title = The Effect of Acupressure at PC6 and REN12 on Vomiting ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6542397/
+match = -380.0%%
+title = Heterologous spinal cord transplantation in man - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8247691/
 
 [www.healthline.com]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = The Clinical Application of Zhongwan REN-12
 url = https://www.journalofchinesemedicine.com/the-clinical-application-of-zhongwan-ren12.html
 
 [en.wikipedia.org]
-match = -120.0%%
-title = List of acupuncture points
-url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
+match = 0.0%%
+title = Zhenren
+url = https://en.wikipedia.org/wiki/Zhenren
 
 [www.pinterest.com]
 match = -310.0%%
@@ -62,9 +62,9 @@ title = Conception Vessel 12, CV 12, Ren-12 - Acupuncture-points.org
 url = https://www.acupuncture-points.org/conception-vessel-12.html
 
 [www.youtube.com]
-match = -120.0%%
-title = NAM Ren 12’6” #7 Double Hander
-url = https://www.youtube.com/watch?v=EXPLP6DND2o
+match = 0.0%%
+title = ren12
+url = https://www.youtube.com/hashtag/ren12
 
 [www.maciociaonline.com]
 match = -250.0%%
@@ -175,4 +175,9 @@ url = https://www.acufinder.com/Acupuncture+Points/Ren+12+(CO+12)/333
 match = -210.0%%
 title = Survivors Pension | Veterans Affairs
 url = https://www.va.gov/pension/survivors-pension/
+
+[www.britannica.com]
+match = -170.0%%
+title = Ren | Chinese Virtue of Humanity
+url = https://www.britannica.com/topic/ren
 
