--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-27 12:52:44
+lastsearch = 2024-07-27 14:18:51
 
 [demxanh.com]
-match = 25.9%%
-title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html?srsltid=AfmBOor86y8ilrqOHTVjsLHTLZUzYcTqrGn3rSbt9dzZF1xGcMsD9gbr
+match = -14.8%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
-match = 0.0%%
-title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hoà
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
 match = 18.5%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = 29.6%%
-title = Chiếu điều hòa cao su non 1m8x2m - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
+match = -37.0%%
+title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.dienmayxanh.com]
 match = -48.1%%
