--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-27 12:53:05
+lastsearch = 2024-07-27 14:27:23
 
 [chieutrucsaigon.com]
 match = 0.0%%
-title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
+title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
+url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
 
 [chieutrelanlan.com]
 match = -76.2%%
@@ -42,9 +42,9 @@ title = Phân phối chiếu trúc Việt Nam giá rẻ tại Hà Nội
 url = https://thegioichieutruc.com/
 
 [www.facebook.com]
-match = 50.0%%
-title = CHIẾU TRÚC | Hanoi
-url = https://www.facebook.com/chieutrucviet/?locale=vi_VN
+match = 21.1%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [chieutruccaobang.com.vn]
 match = 57.9%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = -23.8%%
-title = Chiếu trúc 140cm đến 180cm hạt nâu có viền
-url = https://shopee.vn/Chiếu-trúc-140cm-đến-180cm-hạt-nâu-có-viền-i.231274383.5918690674
+match = 47.6%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.lazada.vn]
 match = -66.7%%
@@ -107,7 +107,7 @@ title = DIEU LE CONG TY TNHH MOT THANH VIEN CHITNG ...
 url = https://www.maybank-kimeng.com.vn/kimengportal/userfiles/upload/file/MBKE_Dieule15122016.pdf
 
 [www.youtube.com]
-match = -60.0%%
-title = KÊNH VTC14
-url = https://www.youtube.com/channel/UCinkijG72G87sn-mtaFJTbA
+match = -38.1%%
+title = Top 3 Chiếu Trúc mùa hè hot nhất tại Đệm Xanh
+url = https://www.youtube.com/watch?v=HfaucbE1OKk
 
