--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-27 12:45:50
+lastsearch = 2024-07-27 14:12:44
 
 [ninhouse.vn]
-match = -146.2%%
-title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+match = -246.2%%
+title = Áo gối | Bao gối đẹp giá rẻ NIN House cao cấp tại Tphcm
+url = https://ninhouse.vn/collections/vo-goi
 
 [www.lamido.vn]
 match = 46.2%%
@@ -84,7 +84,7 @@ url = https://en.bab.la/dictionary/vietnamese-english/
 [shopee.vn]
 match = -184.6%%
 title = vỏ ruột gối ôm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ ruột gối ôm&urlold=vo-goi-om-long-ruot-mau-mon-xanh/8494718674863723139/343220106741734172/
+url = https://shopee.vn/search?keyword=vỏ ruột gối ôm&urlold=vo-goi-om-long-ruot-mau-mon-xanh/8494718674863723139/343220106741734172/ 
 
 [songhong.info]
 match = -161.5%%
