--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-27 11:40:00
+lastsearch = 2024-07-27 14:37:35
 
 [www.tiktok.com]
 match = -193.8%%
@@ -34,7 +34,7 @@ url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOopbmmZwFtudv-kcFyYbOrJfMjuIOKb6p_i0FFf8-na36IillzeU
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [diepxuan.com]
 match = 6.2%%
@@ -129,7 +129,7 @@ url = https://www.instagram.com/boots_tagram23/p/C8kypfiPAue/
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=nb_NO
+url = https://www.facebook.com/diepxuanco/?locale=lv_LV
 
 [www.espn.com]
 match = -93.8%%
