--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-27 13:17:24
+lastsearch = 2024-07-27 14:35:27
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCo8xsph&sig=ACfU3U3dYW2LpfIYxlUSQmVgoy-MByRISw&hl=en&sa=X&ved=2ahUKEwj7qdvppcaHAxVHEGIAHTKPCN4Q6AF6BAhHEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCo9Bupo&sig=ACfU3U0HhsEdR5IxJyP4vEVKzyFbMxR6Iw&hl=en&sa=X&ved=2ahUKEwiuooDg2saHAxWkAHkGHfmMDL0Q6AF6BAgdEAM
 
 [www.diepxuan.com]
 match = -81.0%%
