--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-27 13:57:19
+lastsearch = 2024-07-27 15:31:52
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -475,4 +475,9 @@ url = https://yato.vn/bo-co-le-vong-mieng-lac-leo-dao-chieu-8-chi-tiet-8-19mm-ya
 match = 0.0%%
 title = Trần Thị Thanh Thúy
 url = https://vi.wikipedia.org/wiki/Trần_Thị_Thanh_Thúy
+
+[truyenhinhdaknong.vn]
+match = -37.5%%
+title = Kho video | Đài PT-TH ĐẮK NÔNG
+url = https://truyenhinhdaknong.vn/kho-video.htm
 
