--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-27 14:28:05
+lastsearch = 2024-07-27 15:30:28
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,14 +12,14 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 32.3%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
+match = 29.0%%
+title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
 
 [shopee.vn]
-match = -3.2%%
-title = chiếu trúc điều hòa giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc điều hòa
+match = 16.1%%
+title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
 match = -6.5%%
