--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-27 13:01:01
+lastsearch = 2024-07-27 15:36:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -76.2%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoof2oP2L-05CWXJI7ulzVySHULL9gyoKBaYlqM6EPrXbeX6SDty
 
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOopFBHkBlseFcyqaFdTTzLnY1RoFlFj03wCnvasYeM5dKMrapZwt
 
 [tiki.vn]
 match = -42.9%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = -19.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [www.youtube.com]
 match = -147.6%%
@@ -47,8 +47,8 @@ title = Người dân phấn khởi, vui mừng khi nhận lương hưu, trợ .
 url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap-bao-hiem-xa-hoi-theo-muc-moi-post817050.html
 
 [pctravinh.evnspc.vn]
-match = -90.5%%
-title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
+match = -104.8%%
+title = An toàn & tiết kiệm điện - Công Ty Điện Lực Trà Vinh
 url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
 
 [baoapbac.vn]
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -95.2%%
+title = [ Hàng chuẩn ] Chiếu trúc Thái Lan hạt vàng 1m5 1m6 1m8 ...
+url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1m6-1m8-2m2-cao-cấp-hạt-hồ-lô-không-viền-i.114438421.7333602881
 
 [baohungyen.vn]
 match = -4.8%%
@@ -630,4 +630,9 @@ url = https://www.sggp.org.vn/mua-lu-gay-thiet-hai-nang-giao-thong-ach-tac-post7
 match = 0.0%%
 title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
+
+[www.vinmec.com]
+match = -57.1%%
+title = Giai đoạn hoàng thể và quá trình thụ thai
+url = https://www.vinmec.com/vie/bai-viet/giai-doan-hoang-va-qua-trinh-thu-thai-vi
 
