--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-27 02:41:55
+lastsearch = 2024-07-27 15:45:28
 
 [demxanh.com]
 match = -42.9%%
@@ -152,9 +152,9 @@ title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -3.6%%
-title = Tali temali pramuka pdf - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1abf1bk7b.xn--p1ai/21876459kdxgrh8t7v34cfdv4fe36a
+match = -10.7%%
+title = Derek diedricksen cabin - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1aktidr.xn--p1ai/5386294753misclinicv4fe36a
 
 [news.google.it]
 match = -3.6%%
