--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-27 13:01:22
+lastsearch = 2024-07-27 15:42:03
 
 [www.gov.uk]
 match = -200.0%%
@@ -1060,4 +1060,9 @@ url = https://www.theverge.com/24126502/humane-ai-pin-review
 match = 33.3%%
 title = Google Translate
 url = https://translate.google.com/
+
+[dareobasanjo.medium.com]
+match = 0.0%%
+title = 
+url = https://dareobasanjo.medium.com/the-humane-ai-pin-a-case-study-in-poor-strategy-and-poor-execution-8293734d1adb
 
