--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-27 13:48:46
+lastsearch = 2024-07-27 15:31:31
 
 [screenrant.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
-url = https://www.uscis.gov/forms/explore-my-options
+match = -114.3%%
+title = About the EB-5 Visa Classification
+url = https://www.uscis.gov/working-in-the-united-states/permanent-workers/employment-based-immigration-fifth-preference-eb-5/about-the-eb-5-visa-classification
 
 [www.evergreenrecreation.com]
 match = -157.1%%
@@ -92,9 +92,9 @@ title = The Mask (1994)
 url = https://www.imdb.com/title/tt0110475/
 
 [www.boundless.com]
-match = 0.0%%
-title = 
-url = https://www.boundless.com/immigration-resources/form-n-400-explained/
+match = -128.6%%
+title = Green Cards - Timeline, Costs, and Types
+url = https://www.boundless.com/immigration-resources/the-green-card-explained/
 
 [books.google.com]
 match = -285.7%%
