--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-160x200x10.html
 lastopen = 2024-07-02 14:09:53
 
 [search]
-lastsearch = 2024-07-27 13:32:07
+lastsearch = 2024-07-27 15:37:40
 
 [nemgiakho.com]
 match = 7.4%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-cao-su-lien-a-classic-new-160x200x10cm.html
 [www.liena.com.vn]
 match = -25.9%%
 title = nệm cao su - thiên nhiên là gì? top những sản phẩm
-url = https://www.liena.com.vn/nem-cao-su-thien-nhien-la-gi?srsltid=AfmBOoqLdECGoO2Hb-IG0fM-2PUSOmyDCRAGogh5pV0vpZ2RbLj-NwL3
+url = https://www.liena.com.vn/nem-cao-su-thien-nhien-la-gi
 
 [fefurniture.com.vn]
 match = 7.4%%
@@ -24,7 +24,7 @@ url = https://fefurniture.com.vn/products/nem-cao-su-thien-nhien-lien-a-classic
 [demxanh.com]
 match = -11.1%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOoppwGjcasFser3lNykLL2gJ7Uz5Ws6EBptB-rfTYQkGDaiZJNVA
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
 
 [www.thegioinemvip.com]
 match = 0.0%%
@@ -34,12 +34,12 @@ url = https://www.thegioinemvip.com/nem-cao-su-lien-a-classic-new-160x200x10cm-g
 [www.lazada.vn]
 match = -7.4%%
 title = Nệm Cao su Liên Á Classic 160x200x10. Tặng kèm cover ...
-url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html?srsltid=AfmBOoqqB7rLPPQBvFjKvhCseUYNSB6dHwJfr1RTieK89gOGAv11N8f3
+url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html
 
 [tiki.vn]
-match = 0.0%%
-title = Mua Nệm Cao Su Thiên Nhiên Liên Á - Classic
-url = https://tiki.vn/nem-cao-su-thien-nhien-lien-a-p23482047.html?spid=56383508
+match = -11.1%%
+title = Mua Nệm Cao Su Thiên Nhiên Liên Á - Ladome Blue
+url = https://tiki.vn/nem-cao-su-thien-nhien-lien-a-p23482047.html?spid=56383513
 
 [demcaosuliena.com]
 match = 52.0%%
