CI images update

--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-27 14:24:38
+lastsearch = 2024-07-27 16:57:50
 
 [www.diepxuan.com]
 match = 5.9%%
@@ -22,9 +22,9 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = -58.8%%
-title = Đôi Ruột Gối Bông Hạt Korea Ép Hơi 50*70cm
-url = https://shopee.vn/🌱-Đôi-Ruột-Gối-Bông-Hạt-Korea-Ép-Hơi-50*70cm-i.125787394.5970171584
+match = 58.8%%
+title = ruột gối hơi hiệu KOREA
+url = https://shopee.vn/ruột-gối-hơi-hiệu-KOREA-i.43470238.725470536
 
 [demxanh.com]
 match = -100.0%%
