--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-27 16:14:52
+lastsearch = 2024-07-27 16:55:10
 
 [demxanh.com]
 match = -84.2%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -42.1%%
-title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
+match = -110.5%%
+title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -257,9 +257,9 @@ title = Search
 url = https://gis.harnett.org/portal/home/search.html?t=content&q=tags:"efektler"
 
 [www.booking.com]
-match = -21.1%%
-title = Các Khách Sạn 4 Sao ở Melbourne
-url = https://www.booking.com/fourstars/city/au/melbourne.vi.html
+match = 5.3%%
+title = Tìm khách sạn ở Canberra
+url = https://www.booking.com/city/au/canberra.vi.html
 
 [spie.org]
 match = -121.1%%
