--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-27 06:28:15
+lastsearch = 2024-07-27 16:59:29
 
 [www.diepxuan.com]
 match = 35.7%%
 title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html?srsltid=AfmBOooTXAIk7fKqHNQYXvCOkbRJ9K9aWC18Mgot9meCX-caGou0w6yS
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [www.lazada.vn]
 match = -53.6%%
