--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-27 16:26:52
+lastsearch = 2024-07-27 16:58:49
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -157.1%%
-title = The Linguist and Educational Review - Page 15 - Google Books Result
-url = https://books.google.com/books?id=V3IoVBZlBtsC&pg=RA13-PA15&lpg=RA13-PA15&dq=nem+di+a+mon+9f+16+re&source=bl&ots=MUAjlRRI7h&sig=ACfU3U2l4CE32Fa2f-sGD_COs29Z5777-w&hl=en&sa=X&ved=2ahUKEwjWlrrT88aHAxUJOkQIHbcZO4gQ6AF6BAhDEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCoaAqqg&sig=ACfU3U3P6y3sC9ilTlfDsJb0pcQ6krjplA&hl=en&sa=X&ved=2ahUKEwinyuLl-saHAxU5FFkFHfKNBucQ6AF6BAhEEAM
 
 [www.diepxuan.com]
 match = -81.0%%
