--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-27 14:23:37
+lastsearch = 2024-07-27 16:53:48
 
 [changagoidemtamhao.com]
-match = -10.0%%
-title = Đệm PYEODA
-url = https://changagoidemtamhao.com/dem-pyeoda
+match = -5.0%%
+title = Bộ Chăn Ga Gối PYEODA LSP
+url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-lsp
 
 [demsingapore.com]
-match = -70.0%%
-title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
-url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
+match = -155.0%%
+title = Bộ chăn ga gối Singapore dòng 5 gối cao cấp họa tiết độc ...
+url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold.html
 
 [demxanh.com]
-match = -100.0%%
-title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
+match = -80.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
 
 [www.facebook.com]
 match = -45.0%%
