--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-27 15:42:21
+lastsearch = 2024-07-27 17:40:33
 
 [shopee.vn]
 match = 25.0%%
@@ -84,7 +84,7 @@ url = https://baomoi.com/giu-nghe-det-chieu-truyen-thong-thu-xa-c48769346.epi
 [nhathuoclongchau.com.vn]
 match = -200.0%%
 title = Cách tăng chiều cao ở tuổi 12 đơn giản, dễ dàng ngay tại ...
-url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html
+url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html?srsltid=AfmBOopMkhrwozLU1FOfhQf7w4sVsRPqoXEoTzwzOFrGCsHp5TfYklxs
 
 [vietstock.vn]
 match = -231.2%%
