--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-27 13:44:57
+lastsearch = 2024-07-27 17:46:04
 
 [demxanh.com]
 match = 26.3%%
 title = Chăn lông 5kg mã 02
-url = https://demxanh.com/chan-long-5kg-ma-02.html?srsltid=AfmBOoqmnaHbNR89o6HiImkPnBx3jCjAf2lcLSbr5ZX0dVnHuAL_MlCw
+url = https://demxanh.com/chan-long-5kg-ma-02.html
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 34.8%%
 title = Điệp Xuân Chăn KQ không sóng 5kg
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOor4f5G-ic4EuZRA2obHwYmdiZf2uPba3RRD89k_9cm3VHdU0XE6
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOopyEIYLHzNNxrEiy6BSq7PtNjJOFsp8tOUe32t2F39IgoBhFhh-
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
 match = -87.0%%
