--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-27 13:55:39
+lastsearch = 2024-07-27 17:38:47
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Chiếu cây HT 160x200
 url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
-match = -53.3%%
-title = HT VISION, Cửa hàng trực tuyến
-url = https://shopee.vn/cameragiarebatngo
+match = -40.0%%
+title = chiếu trúc tăm HT cao cấp 2mx2.2m
+url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
 
 [www.htv.com.vn]
 match = -106.7%%
