--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-27 16:44:48
+lastsearch = 2024-07-27 17:38:27
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -12,9 +12,9 @@ title = Alexandre Chan
 url = https://profiles.icts.uci.edu/alexandre.chan
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -136.8%%
-title = Large-scale genome-wide association study of 398238 ...
-url = https://pubmed.ncbi.nlm.nih.gov/38496424/
+match = -178.9%%
+title = Identification of 12 new susceptibility loci for different ...
+url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
 match = -126.3%%
@@ -22,9 +22,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 5.3%%
+title = Arun Wiita, MD, PhD
+url = https://profiles.ucsf.edu/arun.wiita
 
 [www.ncbi.nlm.nih.gov]
 match = -168.4%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -41.7%%
-title = Tommi Gaines
-url = https://profiles.ucsd.edu/tommi.gaines
+match = -10.5%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [medboard.nv.gov]
 match = -100.0%%
