--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-27 15:43:03
+lastsearch = 2024-07-27 17:45:50
 
 [demxanh.com]
 match = -39.1%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
 url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [www.diepxuan.com]
-match = 21.7%%
-title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
+match = 26.1%%
+title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [uannga.vn]
 match = 56.5%%
@@ -52,9 +52,9 @@ title = Chiếu Trúc Cao Sơn – Cao Bằng Loại 1 - Hà Nội
 url = https://thegioidemviet.vn/chieu-truc-cao-bang-loai-1/
 
 [www.facebook.com]
-match = 21.7%%
-title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieutruccaobangcbg/
+match = 13.0%%
+title = Chiếu trúc Bản Ngà - Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieucaobang/
 
 [entershopping.vn]
 match = -21.7%%
