--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-27 16:50:17
+lastsearch = 2024-07-27 17:54:01
 
 [thegioidemviet.vn]
-match = 35.7%%
-title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
-url = https://thegioidemviet.vn/chieu-truc-que-lam/
+match = 21.4%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
+url = https://thegioidemviet.vn/chieu-truc/
 
 [chieutrelanlan.com]
 match = 25.0%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/-Ảnh-thật-100-Chiếu-trúc-Quế-Lâm-loại-1-cao-
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopaIta4_95qmyvSu1UTTkpC-5gj97ORQr9utydl9ljvpJmxLPlc
+url = https://demxanh.com/chieu-truc.html
 
 [tiki.vn]
 match = -39.3%%
