--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-27 17:29:24
+lastsearch = 2024-07-27 17:52:39
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -76.2%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 14.3%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -95.2%%
+title = [ Hàng chuẩn ] Chiếu trúc Thái Lan hạt vàng 1m5 1m6 1m8 ...
+url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1m6-1m8-2m2-cao-cấp-hạt-hồ-lô-không-viền-i.114438421.7333602881
 
 [baohungyen.vn]
 match = -4.8%%
@@ -492,9 +492,9 @@ title = Tử vi con giáp tuần (8/7/2024 đến 14 ...
 url = https://2sao.vn/3-con-giap-danh-mat-van-may-tuong-lai-lao-doc-n-386007.html
 
 [tuoitre.vn]
-match = -128.6%%
-title = Nỗ lực thắp sáng nụ cười trẻ thơ qua dự án cộng đồng của ...
-url = https://tuoitre.vn/no-luc-thap-sang-nu-cuoi-tre-tho-qua-du-an-cong-dong-cua-mm-mega-market-20240723135109049.htm
+match = -123.8%%
+title = Công nhân vã mồ hôi trong hộp dầm để sửa chữa cầu Trà ...
+url = https://tuoitre.vn/cong-nhan-va-mo-hoi-trong-hop-dam-de-sua-chua-cau-tra-khuc-2-20240727161244426.htm
 
 [websosanh.vn]
 match = -81.0%%
