--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-27 17:21:53
+lastsearch = 2024-07-27 17:46:09
 
 [dongagroup.vn]
 match = -272.7%%
 title = Hơn 26 mẫu giường ngủ 2m giá rẻ | giao hàng tận nhà
-url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html?srsltid=AfmBOopffXS5GRJF_0-1rCiy2JpKYSz6ZQM6t1TCurNyf-gBPnUlWsAh
+url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html
 
 [phana.com.vn]
 match = -63.6%%
@@ -19,7 +19,7 @@ url = https://phana.com.vn/giuong-y-te-2-tay-quay-zk26-1
 [noithatduongdong.com]
 match = 45.5%%
 title = Giường tầng sắt
-url = https://noithatduongdong.com/giuong-tang-sat?srsltid=AfmBOooBEmsPDxFoSNi5SraqHCdZpwzZ-3O8k2GNMNXT8VNh_7lT09b3
+url = https://noithatduongdong.com/giuong-tang-sat
 
 [giuonggaphoaphat.com]
 match = -81.8%%
