--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-27 16:31:59
+lastsearch = 2024-07-27 17:59:56
 
 [www.tiktok.com]
 match = -193.8%%
@@ -212,8 +212,8 @@ title = līdzjūtības pantiņi - More - cheaptheatreticket.com
 url = https://cheaptheatreticket.com/blogs/jojnijro-94/
 
 [mechanicaldesign-job.com]
-match = -175.0%%
-title = new rolex yachtmaster - rolex yacht master price new
+match = -200.0%%
+title = new rolex yachtmaster - rolex yacht master price new ...
 url = https://mechanicaldesign-job.com/products/fpftgfny-42/
 
 [www.veryberryfrozenyogurt.com]
