CI images update

--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-27 17:54:59
+lastsearch = 2024-07-27 18:15:43
 
 [anlacphat.com]
 match = -118.8%%
@@ -49,7 +49,7 @@ url = https://qtetech.com/hop-chong-tinh-dien
 [www.lazada.vn]
 match = -137.5%%
 title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-lac-may/
+url = https://www.lazada.vn/tag/chieu-lac-may/?srsltid=AfmBOorHqa1LsYRveSa4tCgemFJRg1Tk3aP99mIbuE28VPwqwCQkxmWK
 
 [vi.made-in-china.com]
 match = -100.0%%
@@ -59,7 +59,7 @@ url = https://vi.made-in-china.com/co_ti-care/product_Medical-100-Cotton-Pillow-
 [www.diepxuan.com]
 match = -68.8%%
 title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html?srsltid=AfmBOor7hxS5LZ6oOmOHvr1l6dFBhmwbqWuI-7YQywTpw_9avshFR75Z
 
 [www.thietbihiepphat.com]
 match = -43.8%%
