--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-27 14:44:49
+lastsearch = 2024-07-27 18:20:14
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -180.0%%
+title = MOVSA - Melbourne Overseas Vietnamese Student ...
+url = https://www.facebook.com/movsa.vn/posts/-𝐃𝐄𝐏𝐀𝐑𝐓𝐔𝐑𝐄-𝐁𝐑𝐈𝐄𝐅𝐈𝐍𝐆-𝐊𝐈𝐂𝐊-𝐒𝐓𝐀𝐑𝐓-️𝐌𝐎𝐕𝐒𝐀-𝐱-𝐒𝐄𝐓-𝐄𝐃𝐔𝐂𝐀𝐓𝐈𝐎𝐍___________________________/754660916690225/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -62,9 +62,9 @@ title = Nhận biết - phân biệt: "Hạt lạc - Hạt đỗ". Lớp Nhà tr
 url = https://mngiaquat.longbien.edu.vn/hoat-dong-chuyen-mon-khoi-nha-tre/nhan-biet-phan-biet-hat-lac-hat-do-lop-nha-tre-d2/ctmb/9991/669168
 
 [shopee.vn]
-match = -113.3%%
-title = Mũi bắn vít Ph2- D2 hàng nội địa Trung
-url = https://shopee.vn/Mũi-bắn-vít-Ph2-D2-hàng-nội-địa-Trung-i.9719183.22089869429
+match = -226.7%%
+title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
+url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
 
 [quangharvest.com]
 match = -186.7%%
