--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-27 15:48:44
+lastsearch = 2024-07-27 18:21:16
 
 [burningman.org]
 match = -60.0%%
@@ -817,9 +817,9 @@ title = Alameda County Sheriff's Office, CA | Home
 url = https://www.alamedacountysheriff.org/
 
 [www.sos.state.mn.us]
-match = -153.3%%
-title = Minnesota Secretary Of State - Register To Vote
-url = https://www.sos.state.mn.us/elections-voting/register-to-vote/
+match = -166.7%%
+title = Minnesota Secretary Of State - Vote early by mail
+url = https://www.sos.state.mn.us/elections-voting/other-ways-to-vote/vote-early-by-mail/
 
 [www.nih.gov]
 match = -260.0%%
@@ -1055,4 +1055,9 @@ url = http://www.jacurutu.com/viewtopic.php?t=1449
 match = -160.0%%
 title = Homepage | District of Columbia Public Library
 url = https://www.dclibrary.org/
+
+[www.fec.gov]
+match = -120.0%%
+title = Candidate | Who can and can't contribute
+url = https://www.fec.gov/help-candidates-and-committees/candidate-taking-receipts/who-can-and-cant-contribute/
 
