--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-27 13:52:32
+lastsearch = 2024-07-27 18:24:21
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -117,9 +117,9 @@ title = South China Morning Post: Breaking China, Asia, HK News ...
 url = https://www.scmp.com/asia
 
 [www.facebook.com]
-match = -15.4%%
-title = Coco Alexandra Chan
-url = https://www.facebook.com/CocoAlexandraChan/
+match = 0.0%%
+title = Coco Chan
+url = https://www.facebook.com/1213cocochan/?locale=ur_PK
 
 [tel.directory.gov.hk]
 match = -84.6%%
