--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-27 17:45:50
+lastsearch = 2024-07-27 18:21:56
 
 [demxanh.com]
 match = -39.1%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
 url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
+match = 21.7%%
+title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
 
 [uannga.vn]
 match = 56.5%%
@@ -22,9 +22,9 @@ title = Chiếu trúc cao bằng 150*190
 url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.html
 
 [shopee.vn]
-match = -56.5%%
-title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè ...
-url = https://shopee.vn/Chiếu-Trúc-Long-Chiếu-Tre-Cao-bằng-Nan-to-loại-đẹp-Mát-Lạnh-Mùa-Hè-Đủ-Tất-Cả-Các-Kích-Thước-i.126028938.19577907706
+match = -4.3%%
+title = CHIẾU TRÚC CAO SƠN – CAO BẰNG LOẠI 1 HÀNG ĐẸP
+url = https://shopee.vn/CHIẾU-TRÚC-CAO-SƠN-–-CAO-BẰNG-LOẠI-1-HÀNG-ĐẸP-i.270303342.11105491570
 
 [chuyenhangviet.com]
 match = -43.5%%
