--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-27 17:31:04
+lastsearch = 2024-07-27 18:22:15
 
 [shopee.vn]
-match = -17.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = -65.2%%
+title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
 
 [www.facebook.com]
 match = 52.2%%
@@ -39,7 +39,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOoqSCE2I84siIf6OFVifD0BfPlGzj8u5M1jKa09jcjFjcPVuAw_F
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [chuyenhangviet.com]
 match = -73.9%%
@@ -64,7 +64,7 @@ url = https://demhong.vn/chieu-tre-viet-pho-men/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOoqSk8-Dbw4ZvX4UEXj2st0954nl5-7-EDLNDZsestjcmcWpQavP
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
 
 [h5.lazada.vn]
 match = 34.8%%
