--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-27 14:26:41
+lastsearch = 2024-07-27 18:12:40
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -176.5%%
-title = HOA President freaks out on kids using the community ...
-url = https://www.reddit.com/r/PublicFreakout/comments/1dxq9wn/hoa_president_freaks_out_on_kids_using_the/
+match = -200.0%%
+title = My condo HOA has an outright ban on any kids living in the ...
+url = https://www.reddit.com/r/legaladvice/comments/11a9d9s/my_condo_hoa_has_an_outright_ban_on_any_kids/
 
 [www.quora.com]
 match = -176.5%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -158.8%%
-title = THAT’S A VIOLATION #comedy #hoa #neighborhood #karen ...
-url = https://www.tiktok.com/@taylortijerina/video/7287986901997341995?lang=en
+match = -82.4%%
+title = I need advice #lawyer #hoa #taylorswift
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.21alivenews.com]
 match = -123.5%%
@@ -510,4 +510,9 @@ url = https://www.newcastlede.gov/250/Code-Enforcement-Property-Maintenance
 match = 0.0%%
 title = 
 url = https://guides.sll.texas.gov/property-owners-associations/ccrs
+
+[www.news-journalonline.com]
+match = 0.0%%
+title = 
+url = https://www.news-journalonline.com/story/news/2024/07/03/new-florida-law-hoa-coa-poa-difference/74290647007/
 
