--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-27 15:15:58
+lastsearch = 2024-07-27 18:14:26
 
 [www.mantubung.com]
-match = -100.0%%
-title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
-url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
+match = -105.6%%
+title = Mùng em bé chống muỗi đa năng cho trẻ em - Mùng Chụp
+url = https://www.mantubung.com/mung-em-be.html
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -127.8%%
-title = Màn chụp cho bé - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/cho bé
+match = -100.0%%
+title = Màn chụp tự bung cho bé ⚡LOẠI 1⚡ Mùng chụp ngủ tự ...
+url = https://shopee.vn/Màn-chụp-tự-bung-cho-bé-⚡LOẠI-1⚡-Mùng-chụp-ngủ-tự-bung-xếp-chống-muỗi-cho-bé-nhỏ-lớn-trẻ-em-sơ-sinh-i.236260085.10218972280
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -47,9 +47,9 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -94.4%%
-title = Mùng Chụp Tự Bung Đỉnh Rộng Cao Cấp Mộc Miên XL20
-url = https://mungmocmien.com/products/mung-man-chup-tu-bung-dinh-rong-cao-cap-3-cua-3
+match = -111.1%%
+title = Mùng ngủ em bé ( mùng chụp em bé, mùng nôi em bé...)
+url = https://mungmocmien.com/collections/mung-chup-em-be
 
 [tiki.vn]
 match = -11.1%%
