--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-27 13:31:04
+lastsearch = 2024-07-27 18:22:57
 
 [www.everonvn.vn]
-match = 80.8%%
-title = Đệm lò xo Everon Pocket Pops
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Pocket-Pops.html
+match = 69.2%%
+title = Đệm lò xo Everon Pocket Premium
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -62,8 +62,8 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -34.6%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
+match = -19.2%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
 url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
