CI images update

--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-27 16:15:13
+lastsearch = 2024-07-27 19:28:00
 
 [www.muji.com]
 match = 7.1%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware?srsltid=AfmBOoqbuz0LD7Ow65OmTjwnOfU-qtfyy845cX6N5yTfccb9UOHeGYXk
+url = https://www.muji.us/collections/tableware
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/muji-pickling-rice-bran
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOoqEhUrsl9h5GszfepstsOw1-W_2oFs5tueY3dnQFdf__ja68NKz
+url = https://www.lazada.vn/tag/chan-long-muji/
 
 [sugoimart.com]
 match = -257.1%%
