--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-27 17:33:10
+lastsearch = 2024-07-27 19:31:31
 
 [www.lazada.vn]
 match = -111.1%%
 title = Nem Cua Bể Đặc Sản Hải Phòng khay 12 cái Thơm ngon
-url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html?srsltid=AfmBOopexhGFxB80ETbtQtAIJJeHcQFpZN0wrUQNhFUbsUiK84PFCKz4
+url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html
 
 [www.coastpneumatics.com]
 match = -116.7%%
@@ -59,7 +59,7 @@ url = https://www.instagram.com/nemfurniturejsc/?hl=en
 [www.diepxuan.com]
 match = -111.1%%
 title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html?srsltid=AfmBOoq0taJme6RVwQqzuaPsjdrAdrXrG8vE91gbTcdW1Eh4TeMX2Y_e
+url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
 match = -83.3%%
