--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-07-27 17:13:36
+lastsearch = 2024-07-27 19:31:09
 
 [demxanh.com]
 match = -14.8%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOorKjX-LtBpe9KLoWoME2X43PwOpnj3_2uB3veqyhBdOWFgd2mNY
 
 [shopee.vn]
 match = -29.6%%
