--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-27 16:26:33
+lastsearch = 2024-07-27 19:22:50
 
 [agasound.vn]
 match = 6.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html
+url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOoreC_mx8VytW3WxVm5vqITKZYBZu0JByvYeYx09q498HiSNbITk
 
 [shopee.vn]
 match = -186.7%%
@@ -280,4 +280,9 @@ url = https://www.highlandscoffee.com.vn/vn/he-thong-cua-hang.html
 match = -220.0%%
 title = Top 22 vitamin D3 K2 tăng chiều cao các mẹ tin dùng nên ...
 url = https://www.nhathuocankhang.com/ban-tin-suc-khoe/cac-loai-vitamin-d3-k2-tot-tren-thi-truong-1385972
+
+[vi.xhlux.com]
+match = -186.7%%
+title = Đèn LED Downlight Chống Chói COB-D212 Series 30-40W
+url = https://vi.xhlux.com/product/anti-glare-cob-d212-series-led-downlight-30-40w/
 
