--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-27 18:22:15
+lastsearch = 2024-07-27 19:24:56
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
+match = 0.0%%
+title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
+url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
 
 [www.facebook.com]
-match = 52.2%%
-title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+match = 43.5%%
+title = Chiếu Cói Thân Vui Thái Bình
+url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
 
 [www.sendo.vn]
-match = 0.0%%
-title = chiếu nhựa thái bình bền đẹp đủ cỡ - hot32068
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-95306137.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [trangvangvietnam.com]
 match = -87.0%%
@@ -110,4 +110,14 @@ url = http://zaodich.webtretho.com/forum/showthread.php?t=2469555
 match = -56.5%%
 title = Chiếu Cói Thái Bình, Chiếu Nhựa, Chiếu Trúc Các Loại
 url = https://vatgia.com/raovat/7881/14011174/chuyen-chieu-chieu-coi-thai-binh-chieu-nhua-chieu-truc-cac-loai.html
+
+[diennuoctruongphu.vn]
+match = 4.3%%
+title = Bồn nhựa Thái Bình - Luxury Bathroom
+url = http://diennuoctruongphu.vn/san-pham/bon-nhua-thai-binh
+
+[anhchinh.vn]
+match = 11.1%%
+title = Điện máy Ánh Chinh
+url = https://anhchinh.vn/
 
