--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-27 14:16:06
+lastsearch = 2024-07-27 19:29:46
 
 [www.everonvn.vn]
-match = 20.0%%
-title = Đệm bông Everon 1m, 1m2, 1m4
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
+match = -110.0%%
+title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [everon.vip]
 match = 50.0%%
@@ -72,8 +72,8 @@ title = Đệm Sóng Everon
 url = https://everon.online/products/dem-song-everon
 
 [everonxuankhieu.vn]
-match = -105.0%%
-title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ VÀ ...
+match = -90.0%%
+title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ ...
 url = https://everonxuankhieu.vn/dem-bong-ep-everon/
 
 [nemgiagoc.vn]
