--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-27 13:56:00
+lastsearch = 2024-07-27 19:32:55
 
 [sieuthidemonline.vn]
-match = -19.0%%
-title = Nệm lò xo Techwood cao cấp giá rẻ tại Hà Nội
-url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/attachment/dem-lo-xo-techwood/
+match = -66.7%%
+title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
 
 [tuananh.vn]
 match = 52.4%%
@@ -77,9 +77,9 @@ title = Bảng giá khuyến mại đệm lò xo Techwood chất lượng cao!
 url = https://demhong.vn/dem-lo-xo-techwood/
 
 [demtot.com]
-match = 36.8%%
-title = Đệm lò xo Vạn Thành
-url = https://demtot.com/dem-lo-xo-van-thanh/
+match = 38.9%%
+title = Đệm lò xo Tuấn Anh
+url = https://demtot.com/dem-lo-xo-tuan-anh/
 
 [sites.google.com]
 match = -47.6%%
