--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-27 16:22:23
+lastsearch = 2024-07-27 19:24:37
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -37,9 +37,9 @@ title = US strategic bombers conduct drills with Japan and South ...
 url = https://www.vietnam.vn/en/may-bay-nem-bom-chien-luoc-my-tap-tran-voi-nhat-han-o-ban-dao-trieu-tien/
 
 [www.youtube.com]
-match = 0.0%%
-title = 
-url = https://www.youtube.com/watch?v=azfAgPKgIYs
+match = -150.0%%
+title = Our Game (ft. Kim Jung Gi) | Anniversary 2019 Mural Time ...
+url = https://www.youtube.com/watch?v=3owI8KRRwaI
 
 [som.yale.edu]
 match = -110.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -115.0%%
-title = PM calls off press meeting amid clash over THAAD ...
-url = https://en.yna.co.kr/view/AEN20170907001800315
+match = -90.0%%
+title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
+url = https://en.yna.co.kr/view/AEN20130109006800325
 
 [www.vlr.gg]
 match = 5.6%%
