--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-27 15:45:04
+lastsearch = 2024-07-27 19:25:38
 
 [suongtuyet.com]
-match = -4.0%%
-title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
-url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
+match = -36.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
 
 [tuananh.vn]
 match = 8.0%%
@@ -22,9 +22,9 @@ title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ..
 url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
-match = -40.0%%
-title = nệm tuấn anh giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=nệm tuấn anh
+match = 43.5%%
+title = Đệm korea plus TUẤN ANH
+url = https://shopee.vn/Đệm-korea-plus-TUẤN-ANH-i.138900891.5301651649
 
 [demkhangduy.com]
 match = 25.0%%
