CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-27 12:31:42
+lastsearch = 2024-07-27 20:10:43
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -150.0%%
-title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
-url = https://www.youtube.com/watch?v=6598XYpaW3E
+match = -243.8%%
+title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
+url = https://www.youtube.com/watch?v=0vPz1cnaTNM
 
 [hawater.com.vn]
 match = -75.0%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -150.0%%
-title = Chiều nay bún đậu THỊ NỞ nhận ship tân toà ạ | ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2398390100541455/
+match = -175.0%%
+title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP. ...
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2400455940334871/
 
 [www.sjcallahabad.org]
 match = -212.5%%
@@ -262,9 +262,9 @@ title = Báo Hòa Bình - Co quan ngon luan cua tinh
 url = https://baohoabinh.com.vn/
 
 [baocaobang.vn]
-match = -156.2%%
-title = Linh thiêng Nghĩa trang liệt sĩ quốc gia Trường Sơn
-url = https://baocaobang.vn/linh-thieng-nghia-trang-liet-si-quoc-gia-truong-son-3170853.html
+match = -206.2%%
+title = Khởi công xây dựng nhà “Nghĩa tình đồng đội” tại huyện ...
+url = https://baocaobang.vn/khoi-cong-xay-dung-nha-nghia-tinh-dong-doi-tai-huyen-trung-khanh-3170945.html
 
 [tgpsaigon.net]
 match = -106.2%%
@@ -277,9 +277,9 @@ title = 7 mỹ nhân khoe dáng thướt tha tại thảm xanh Tony Awards ...
 url = https://www.nguoi-viet.com/phu-nu/my-nhan/
 
 [vtcnews.vn]
-match = -187.5%%
-title = Xe máy bật đèn chiếu xa trong khu đông dân cư bị phạt ...
-url = https://vtcnews.vn/xe-may-bat-den-chieu-xa-trong-khu-dong-dan-cu-bi-phat-bao-nhieu-tien-ar879703.html
+match = -75.0%%
+title = Tuyệt chiêu phối đồ cho chị em da ngăm
+url = https://vtcnews.vn/tuyet-chieu-phoi-do-cho-chi-em-da-ngam-ar884955.html
 
 [thoibaotaichinhvietnam.vn]
 match = -225.0%%
