--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-27 18:21:16
+lastsearch = 2024-07-27 20:00:20
 
 [burningman.org]
 match = -60.0%%
@@ -1060,4 +1060,39 @@ url = https://www.dclibrary.org/
 match = -120.0%%
 title = Candidate | Who can and can't contribute
 url = https://www.fec.gov/help-candidates-and-committees/candidate-taking-receipts/who-can-and-cant-contribute/
+
+[www.deepl.com]
+match = 0.0%%
+title = 
+url = https://www.deepl.com/
+
+[www.kdrv.com]
+match = -180.0%%
+title = KDRV NewsWatch 12 | Medford News, Weather, Sports
+url = https://www.kdrv.com/
+
+[he-equipment.com]
+match = 0.0%%
+title = Equipment Rental | H&E
+url = https://he-equipment.com/
+
+[www.mjrtheatres.com]
+match = 20.0%%
+title = MJR Theatres: Home
+url = https://www.mjrtheatres.com/
+
+[www.northjersey.com]
+match = -133.3%%
+title = Bergen Record: NJ news from Bergen, Passaic
+url = https://www.northjersey.com/
+
+[www.pahomepage.com]
+match = -193.3%%
+title = PAhomepage.com – Powered by Eyewitness News, WBRE ...
+url = https://www.pahomepage.com/
+
+[www.megaplextheatres.com]
+match = -240.0%%
+title = Megaplex Movie Theatres | Movie Showtimes & Tickets Near ...
+url = https://www.megaplextheatres.com/
 
