--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-27 17:46:30
+lastsearch = 2024-07-27 20:00:39
 
 [tuananh.vn]
-match = 22.2%%
-title = Đệm Korea Gấm Plus
-url = https://tuananh.vn/dem-korea-gam-plus-p223.html
+match = 8.0%%
+title = Đệm bông ép 3 mảnh Korea Kaki
+url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 
 [demxanh.com]
 match = -48.0%%
@@ -27,9 +27,9 @@ title = Bảng Giá đệm mút Korea Tuấn Anh - Mới 2023 [Giảm -50%%]
 url = https://thegioidemviet.vn/dem-mut-pe-korea-tuan-anh/
 
 [shopee.vn]
-match = -40.0%%
-title = nệm tuấn anh giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=nệm tuấn anh
+match = -52.0%%
+title = Đệm Bông Ép Korea Bebop Tuấn Anh chính hãng, đủ size, ...
+url = https://shopee.vn/Đệm-Bông-Ép-Korea-Bebop-Tuấn-Anh-chính-hãng-đủ-size-thoáng-khí-cứng-vỏ-cotton-thấm-hút-tốt-i.22640428.22257479785
 
 [demviethome.vn]
 match = -4.0%%
