--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-27 19:22:50
+lastsearch = 2024-07-27 19:59:19
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOoreC_mx8VytW3WxVm5vqITKZYBZu0JByvYeYx09q498HiSNbITk
+url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
 match = -186.7%%
