--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-27 18:21:35
+lastsearch = 2024-07-27 20:06:27
 
 [vinatools.com]
 match = -206.7%%
 title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/?srsltid=AfmBOoqiDyeu2B1ON3ggzyeUU60gVLq_m30rCIo-KaU_xZFI1ZRKC3Uk
+url = https://vinatools.com/keo-cat-ton-d216-sbsk/
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -237,8 +237,8 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [www.axel-gl.com]
-match = -260.0%%
-title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông qua lỗ ...
+match = -213.3%%
+title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông ...
 url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 
 [hcmyu.hpu2.edu.vn]
