--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-27 11:53:20
+lastsearch = 2024-07-27 20:07:51
 
 [www.georgianicols.com]
-match = -69.2%%
-title = Georgia Nicols | Georgia Nicols
-url = https://www.georgianicols.com/
+match = -192.3%%
+title = Daily Horoscope for Saturday, July 27, 2024
+url = https://www.georgianicols.com/daily/
 
 [www.galottery.com]
 match = -7.7%%
@@ -27,14 +27,14 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -23.1%%
-title = Japanese spider crab
-url = https://en.wikipedia.org/wiki/Japanese_spider_crab
+match = -92.3%%
+title = Anthony Edwards (basketball)
+url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -269.2%%
@@ -52,8 +52,8 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -15.4%%
-title = Ayu Gani 🐘 (@ganegani)
+match = -223.1%%
+title = Ayu Gani 🐘 (@ganegani) • Instagram photos and videos
 url = https://www.instagram.com/ganegani/?hl=en
 
 [www.nebf.com]
