--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-27 18:17:07
+lastsearch = 2024-07-27 20:44:30
 
 [tuananh.vn]
-match = 22.2%%
-title = Đệm Korea Gấm Plus
-url = https://tuananh.vn/dem-korea-gam-plus-p223.html
+match = -72.7%%
+title = Đệm bông ép
+url = https://tuananh.vn/dem-bong-ep-c51.html
 
 [demxanh.com]
 match = -48.0%%
@@ -100,4 +100,9 @@ url = https://dem24h.vn/dem-bong-ep-be-mat-masage-korea-plus
 match = -20.0%%
 title = Đệm bông ép Tuấn Anh Korea Gấm - chăn ga gối
 url = http://www.entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
+
+[demtot.com]
+match = 33.3%%
+title = Đệm lò xo Tuấn Anh
+url = https://demtot.com/dem-lo-xo-tuan-anh/
 
