CI images update

--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-27 16:59:29
+lastsearch = 2024-07-27 21:11:46
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -250,4 +250,14 @@ url = https://www.impehcm.org.vn/noi-dung/cac-benh-do-con-trung-khac/bo-chet.htm
 match = 25.0%%
 title = Tượng nữ thần bằng đá 18
 url = https://trongdoitam1.mysapo.net/tuo-ng-nu-tha-n-ba-ng-da-18
+
+[nimpe.vn]
+match = -60.7%%
+title = nghiên cứu một số đặc điểm dịch tễ, thành phần loài sán lá ...
+url = http://nimpe.vn/userfiles/file/DaotaoSDH/2020/NCS Hòa/Luan_an_Doan_Thuy_Hoa1.pdf
+
+[www.slideshare.net]
+match = -28.6%%
+title = ĐÁNH GIÁ KẾT QUẢ PHẪU THUẬT NỘI SOI ĐIỀU TRỊ U ...
+url = https://www.slideshare.net/slideshow/bqtppt0111/47364367
 
