--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-27 13:48:08
+lastsearch = 2024-07-27 21:18:42
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -437,9 +437,9 @@ title = atp 5-0.2 staff reference guide staffing draft—not for implem ...
 url = https://usacac.army.mil/sites/default/files/documents/cadd/Collaboration/11-08-19_SRG_CGSC2.pdf
 
 [www.biblegateway.com]
-match = -108.7%%
-title = Marc 14 BDS;KAR;KJV;NIV - Mort et résurrection de Jésus Le
-url = https://www.biblegateway.com/passage/?search=Marc 14&version=BDS;KAR;KJV;NIV
+match = -56.5%%
+title = Atos 19,Acts 19 NVI-PT;NIV - Paulo em Éfeso
+url = https://www.biblegateway.com/passage/?search=Atos 19,Acts 19&version=NVI-PT;NIV
 
 [kids.nationalgeographic.com]
 match = 0.0%%
