--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-27 19:28:00
+lastsearch = 2024-07-27 21:11:03
 
 [www.muji.com]
-match = 7.1%%
-title = chăn lông nhung xám mỏng
-url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
+match = 0.0%%
+title = 
+url = https://www.muji.com/ae/feature/whatismuji/
 
 [thegioidemviet.vn]
 match = -192.9%%
