--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-27 20:22:31
+lastsearch = 2024-07-27 21:13:31
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -67,8 +67,8 @@ title = Thảm Trải Sàn - Đồ Trang Trí / Đồ Decor
 url = https://moho.com.vn/collections/tham
 
 [homeoffice.com.vn]
-match = -90.9%%
-title = Hướng Dẫn Tính Kích Thước Giường Ngủ Đúng Chuẩn & ...
+match = -54.5%%
+title = Hướng Dẫn Tính Kích Thước Giường Ngủ Đúng ...
 url = https://homeoffice.com.vn/kich-thuoc-giuong-ngu-dung-tieu-chuan.html
 
 [vn.my-best.com]
@@ -82,8 +82,8 @@ title = Căn hộ cho thuê tại Bras-Panon, Saint-Benoît, Réunion - Airbnb
 url = https://www.airbnb.com.vn/rooms/1104230023148123684
 
 [comehome.com.vn]
-match = -113.6%%
-title = TOP mẫu giường tầng cho bé trai, bé gái, giường tầng trẻ ...
+match = -40.9%%
+title = TOP mẫu giường tầng cho bé trai, bé gái ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
