--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-27 20:07:09
+lastsearch = 2024-07-27 21:12:49
 
 [everonvn.com.vn]
-match = -11.1%%
-title = Bộ Everon Ep1831 - Curtis
-url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
+match = -55.6%%
+title = Vỏ gối đầu Everon Hotgirl giảm giá 30%%
+url = https://everonvn.com.vn/everon/2093/vo-goi-everon-hotgirl
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -177.8%%
+title = 【Ready】⚡ Vỏ gối nằm 💖45x65💖 vỏ gối bao gối cotton poly đơn ...
+url = https://www.lazada.vn/products/ready-vo-goi-nam-45x65-vo-goi-bao-goi-cotton-poly-don-gian-an-nhu-bedding-i2364912134.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -37,9 +37,9 @@ title = Vỏ gối kê xoa 45x65 - Điệp Xuân
 url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
-match = -111.1%%
-title = Vỏ gối EPM21065 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm21065-45x65.html
+match = -100.0%%
+title = Vỏ gối ES1808 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-es1808-45x65.html
 
 [shopee.vn]
 match = -127.8%%
